--- a/front/index.html
+++ b/front/index.html
@@ -19,66 +19,139 @@
         .product-card button {
             margin-top: 10px;
         }
+
+        .dark-theme {
+            background-color: #121212;
+            color: #ffffff;
+        }
+
+        .dark-theme .product-card {
+            background-color: #1e1e1e;
+            border-color: #333;
+        }
+
+        .dark-theme .navbar {
+            background-color: #333 !important;
+        }
+
+        .dark-theme .nav-link {
+            color: #ffffff !important;
+        }
     </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Главная</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="cart.html">Корзина</a>
+                    </li>
+                    <li class="nav-item">
+                        <button class="nav-link" onclick="toggleTheme()">Сменить тему</button>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <div id="products" class="product-grid"></div>
 
     <script>
         function loadProducts() {
-            fetch('http://localhost:3000/api/products')
-                .then(response => response.json())
+            fetch('http://localhost:3000/api/products') // Исправлено на порт 3000
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Network response was not ok');
+                    }
+                    return response.json();
+                })
                 .then(products => {
                     const productsDiv = document.getElementById('products');
-                    productsDiv.innerHTML = products.map(product => `
-                        <div class="product-card" data-id="${product.id}">
-                            <h3>${product.name}</h3>
-                            <p>Цена: ${product.price} ₽</p>
-                            <p>${product.description}</p>
-                            <p>Категории: ${product.categories.join(', ')}</p>
-                        </div>
-                    `).join('');
+                    const cart = JSON.parse(localStorage.getItem('cart')) || [];
+                    productsDiv.innerHTML = products.map(product => {
+                        const isInCart = cart.some(item => item.id === product.id);
+                        return `
+                            <div class="product-card" data-id="${product.id}">
+                                <h3>${product.name}</h3>
+                                <p>Цена: ${product.price} ₽</p>
+                                <p>${product.description}</p>
+                                <p>Категории: ${product.categories.join(', ')}</p>
+                                <button onclick="addToCart(${product.id})" ${isInCart ? 'disabled' : ''}>
+                                    ${isInCart ? 'Купить' : 'Добавить в корзину'}
+                                </button>
+                            </div>
+                        `;
+                    }).join('');
                 })
-            .catch(error => console.error('Ошибка:', error));
+                .catch(error => console.error('Ошибка:', error));
         }
 
-        function editProduct(id) {
-            const name = prompt("Введите новое название:");
-            const price = prompt("Введите новую цену:");
-            const description = prompt("Введите новое описание:");
-            const categories = prompt("Введите новые категории (через запятую):").split(',').map(cat => cat.trim());
-
-            const updatedProduct = { name, price: parseFloat(price), description, categories };
-
-            fetch(`http://localhost:8080/api/admin/products/${id}`, {
-                method: 'PUT',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(updatedProduct)
-            })
-            .then(response => response.json())
-            .then(data => {
-                alert('Продукт обновлен успешно!');
-                loadProducts();
-            })
-            .catch(error => console.error('Ошибка:', error));
+        function addToCart(productId) {
+            fetch(`http://localhost:3000/api/products/${productId}`) // Исправлено на порт 3000
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Network response was not ok');
+                    }
+                    return response.json();
+                })
+                .then(product => {
+                    let cart = JSON.parse(localStorage.getItem('cart')) || [];
+                    const existingProduct = cart.find(item => item.id === productId);
+                    if (existingProduct) {
+                        existingProduct.quantity += 1;
+                    } else {
+                        product.quantity = 1;
+                        cart.push(product);
+                    }
+                    localStorage.setItem('cart', JSON.stringify(cart));
+                    alert('Товар добавлен в корзину!');
+                    updateButton(productId); // Обновляем кнопку
+                })
+                .catch(error => {
+                    console.error('Ошибка:', error);
+                    alert('Ошибка при добавлении товара в корзину. Проверьте консоль для подробностей.');
+                });
         }
 
-        function deleteProduct(id) {
-            fetch(`http://localhost:8080/api/admin/products/${id}`, {
-                method: 'DELETE'
-            })
-            .then(response => response.json())
-            .then(data => {
-                alert('Продукт удален успешно!');
-                loadProducts();
-            })
-            .catch(error => console.error('Ошибка:', error));
+        function updateButton(productId) {
+            const productCard = document.querySelector(`.product-card[data-id="${productId}"]`);
+            if (productCard) {
+                const button = productCard.querySelector('button');
+                if (button) {
+                    button.textContent = 'Купить';
+                    button.disabled = true; // Делаем кнопку неактивной
+                }
+            }
         }
+
+        function toggleTheme() {
+            const body = document.body;
+            if (body.classList.contains('dark-theme')) {
+                body.classList.remove('dark-theme');
+                localStorage.setItem('theme', 'light');
+            } else {
+                body.classList.add('dark-theme');
+                localStorage.setItem('theme', 'dark');
+            }
+        }
+
+        // При загрузке страницы применяем сохраненную тему
+        document.addEventListener('DOMContentLoaded', () => {
+            const savedTheme = localStorage.getItem('theme') || 'light';
+            document.body.classList.toggle('dark-theme', savedTheme === 'dark');
+        });
 
         // Загрузка всех продуктов при открытии страницы
         loadProducts();
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-</html> 
+</html>
