--- a/front/cart.html
+++ b/front/cart.html
@@ -15,6 +15,18 @@
             padding: 15px;
             border-radius: 8px;
         }
+        .clear-cart-button {
+            margin: 20px;
+            padding: 10px 20px;
+            background-color: #dc3545;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        .clear-cart-button:hover {
+            background-color: #c82333;
+        }
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -23,8 +35,10 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">Главная</a>
             <a class="nav-link active" href="cart.html">Корзина</a>
+            <button class="clear-cart-button" onclick="clearCart()">Очистить корзину</button>
         </div>
     </nav>
+
 
     <div id="cart" class="cart-grid"></div>
 
@@ -41,6 +55,13 @@
             `).join('');
         }
 
+        function clearCart() {
+            localStorage.removeItem('cart'); // Очищаем корзину
+            loadCart(); // Обновляем отображение корзины
+            alert('Корзина очищена!');
+        }
+
+        // Загрузка корзины при открытии страницы
         loadCart();
     </script>
 </body>
